--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "blessed": "^0.1.81",
     "node-binance-api": "^0.11.11",
+    "node-telegram-bot-api": "^0.51.0",
     "pino": "^6.10.0",
     "pino-pretty": "^4.3.0",
     "systeminformation": "^4.34.7"
